fix font size on mobile (#37)

--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -61,10 +61,14 @@ body {
 .footer div {
   padding: 1rem;
 }
+
+.footer div .account {
+  padding-right: 2rem;
+}
 /* end page layout */
 
 .article_date {
-  font-size: 0.9rem;
+  font-size: 1rem;
 }
 
 .text-center {
